--- a/style.css
+++ b/style.css
@@ -1,19 +1,52 @@
 body {
     display: flex;
     flex-direction: column;
+    margin: 0%;
 }
 
 ul {
     list-style-type: none;
     display: flex;
+    gap: 8px;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
 
 .header-container {
     background-color: #1f2937;
-    font-size: 18px;
+    font-size: 12px;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.hero {
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+}
+
+.hero-main {
+    font-size: 48px;
+    font-weight: bold;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    text-align: start;
+    width: 400px;
+    padding-left: 5%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 50px;
+    
 }
