--- a/style.css
+++ b/style.css
@@ -71,4 +71,35 @@ a {
 
 .info-container {
     display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.info-header {
+    margin-top: 20px;
+    font-size: 36px;
+    font-weight: bold;
+    color: #1f2937;
+}
+
+.info-buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 52px;
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    width: 200px;
+    border-radius: 15px;
+    border: 5px solid #3882f6;
+}
+
+.info {
+    max-width: 200px;
+    font-size: 18px;
 }
