--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0%;
+    font-family: "PT Sans", 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 ul {
@@ -73,6 +74,7 @@ a {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding-bottom: 100px;
 }
 
 .info-header {
@@ -123,4 +125,25 @@ a {
     padding-left: 8%;
     padding-right: 8%;
     padding-bottom: 42px;
+}
+
+.author-one {
+    margin-left: 50%;
+    font-weight: bold;
+}
+
+.action-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
+
+.signup {
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 200px;
+    width: 800px;
 }
