--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
 .hero-signup-button {
     width: fit-content;
     border-radius: 5px;
+    border: none;
     padding: 5px;
     background-color: #3883F6;
 }
@@ -141,9 +142,26 @@ a {
 
 .signup {
     background-color: #3882f6;
+    color: #f9faf8;
+    border-radius: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 200px;
     width: 800px;
+}
+
+.signup-button {
+    background-color: #3882f6;
+    border: 2px solid #f9faf8;
+    border-radius: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.action-signup-button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: none;
+    padding: 5px;
 }
