--- a/style.css
+++ b/style.css
@@ -21,10 +21,8 @@ a {
     font-size: 12px;
     color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
 .hero {
@@ -129,7 +127,8 @@ a {
 }
 
 .author-one {
-    margin-left: 50%;
+    align-self: flex-end;
+    margin-right: 20%;
     font-weight: bold;
 }
 
@@ -164,4 +163,14 @@ a {
     color: #f9faf8;
     border: none;
     padding: 5px;
+}
+
+.footer-container {
+    background-color: #1f2937;
+    color: #f9faf8;
+    height: 100px;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
