--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0%;
-    font-family: "PT Sans", 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 ul {
@@ -98,6 +98,7 @@ a {
     width: 200px;
     border-radius: 15px;
     border: 5px solid #3882f6;
+    margin-bottom: 20px;
 }
 
 .info {
